// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct amount 1`] = `
<div>
  <h1>
    View 
    1
     
    expense
     
    $2.35
  </h1>
</div>
`;

exports[`should render correct amount 2`] = `
<div>
  <h1>
    View 
    10
     
    expenses
     
    $23.50
  </h1>
</div>
`;
